[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/icon.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerBodyCollision.tres" type="Shape2D" id=3]
[ext_resource path="res://Sounds/ActionSoundEffects.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.05943, 25.5488 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5125, 4.9451 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = ExtResource( 3 )

[node name="GoalDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalDetector"]
shape = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Left" type="Area2D" parent="."]
position = Vector2( -33, 0 )
collision_layer = 0
collision_mask = 2147483654
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 33, 0 )
collision_layer = 0
collision_mask = 6
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( 0, -33 )
collision_layer = 0
collision_mask = 6
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 2 )

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 0, 33 )
collision_layer = 0
collision_mask = 6
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 2 )

[node name="ActionSoundEffects" parent="." instance=ExtResource( 4 )]
[connection signal="area_entered" from="GoalDetector" to="." method="_on_GoalDetector_area_entered"]
